# time-series-forecasting-comparison

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-streamlit.txt  requirements.txt
.streamlit/: config.toml
configs/: default_config.yaml  optuna_configs.yaml
data/forecasts/ETT/: arima_h1.json  catboost_h1.json  catboost_h1_feature_importance.json  catboost_h1_shap.json  holt_winters_h1.json  lightgbm_h1.json  lightgbm_h1_feature_importance.json  lightgbm_h1_shap.json  lstm_h1.json  nbeats_h1.json  prophet_h1.json  random_forest_h1.json  random_forest_h1_feature_importance.json  random_forest_h1_shap.json  tft_h1.json  transformer_h1.json  xgboost_h1.json  xgboost_h1_feature_importance.json  xgboost_h1_shap.json
docs/: ARCHITECTURE.md  PRD.md
docs/adr/: ADR-001-task-framing.md  ADR-002-preprocessing.md  ADR-003-validation-strategy.md  ADR-004-model-selection.md  ADR-005-feature-engineering.md  ADR-006-deployment.md  ADR-007-rl-model-selector.md  README.md
scripts/: check_setup.py  download_data.py  extract_feature_importances.py  extract_shap_values.py  run_inference.py  train_model.py  validate_data.py
src/: utils.py
src/data/: __init__.py  ett_loader.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  deep_learning.py  ml.py  statistical.py
src/rl/: __init__.py  bandit.py  model_selector.py  window_features.py
src/ui/: dashboard.py
