[tool.poetry]
name = "time-series-forecasting-comparison"
version = "0.1.0"
description = "Benchmark comparing statistical, ML, and deep learning time series forecasting models on the ETT dataset"
authors = ["Sabrina Pribadi <sabrinapribadi@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# Core data
numpy = "^1.24.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
pyarrow = "^14.0.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.14.0"

# Statistical models
statsmodels = "^0.14.0"
pmdarima = "^2.0.0"
prophet = "^1.1.0"

# ML models
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
lightgbm = "^4.0.0"
catboost = "^1.2.0"
joblib = "^1.3.0"

# Deep learning
torch = ">=2.0.0"
darts = "^0.27.0"

# Hyperparameter optimisation
optuna = "^3.3.0"

# Dashboard
streamlit = "^1.35.0"

# Utilities
tqdm = "^4.65.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
